--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -1307,7 +1307,11 @@ border-right: 30px solid #202020;
 		width: 100%;
 		top:10%;
 		font-size: .8em;
-		margin: -65px auto 0;
+		margin: -75px auto 0;
+	}
+
+	#edit_rsvp_form p:first-child {
+		margin-top: 35px;
 	}
 
 	#edit_rsvp h1 {
@@ -1355,7 +1359,7 @@ border-right: 30px solid #202020;
 	}
 
 	.rsvp_update {
-		margin-top: -25px;
+		margin-top: -10px;
 	}
 
 
