--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -1304,7 +1304,7 @@ border-right: 30px solid #202020;
 		width: 100%;
 	}
 	.created_inner {
-		width: 95%;
+		height: 95%;
 	}
 	#edit_rsvp_form {
 		width: 100%;
