--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -1,4 +1,17 @@
-
+.wrongway {
+	display: none;
+	color: black; 
+	text-shadow:-1px -1px 0 #fff,
+    1px -1px 0 #fff,
+    -1px 1px 0 #fff,
+    1px 1px 0 #fff; 
+    font-size: 2em;  
+    text-align:center; 
+    position:absolute; 
+    top:40%; 
+    left: 50%; 
+    transform:translate(-40%, -50%);
+}
 
 #form_rsvp, #form_error, #form_food {
 	display: none;
@@ -601,7 +614,6 @@
 }
 
 .code_submit, .rsvp_submit, .rsvp_update {
-	margin-left: 20px;
 	height: 40px;
 	line-height: 40px;
 	width: 100px;	
@@ -1292,7 +1304,8 @@ border-right: 30px solid #202020;
 	}
 
 	.rsvp_link_mistake {
-		margin-left: 10px;
+		top: 20px;
+		left: 20px;
 	}
 
 	.overview a:not(.rsvp_link_mistake){
