--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -64,10 +64,7 @@
 
 </div>
 
-<div class="wrongway" style="color: black; text-shadow:-1px -1px 0 #fff,
-    1px -1px 0 #fff,
-    -1px 1px 0 #fff,
-    1px 1px 0 #fff; font-size: 2em;  text-align:center; position:absolute; top:40%; left: 50%; transform:translate(-40%, -50%);">
+<div class="wrongway" >
 	<p>Turn your phone the other way to continue</p>
 </div>
 
