--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -15,6 +15,13 @@
     transform: translate(-40%, -50%);
 }
 
+.wedding_party_h1_con {
+	background-color: white; 
+	width: 100%; 
+	height: 200px; 
+	position: relative;
+}
+
 #form_rsvp, #form_error, #form_food {
 	display: none;
 }
@@ -1350,7 +1357,7 @@ border-right: 30px solid #202020;
 
 	.wpContainers {
 		width: 411px;
-		margin-left: -200px;
+		margin-left: -205.5px;
 	}
 
 	.info_container {
@@ -1392,6 +1399,53 @@ border-right: 30px solid #202020;
 	.code_submit {
 		width: 65px;
 		margin-left: 5px;
+	}
+
+	.groomsmen, .bridal_party {
+		width: 100%;
+		margin: 20px auto;
+	}
+
+	#wedding_party h1 {
+		font-size: 2.5em;
+	}
+
+	.wpContainers {
+		width: 95%;
+		margin: 0 auto;
+		left: 0px;
+		height: 150px;
+	}
+
+	.wedding_party_pic_con img {
+		width: 112px;
+		height: 112px;
+	}
+
+	.wedding_party_h1_con {
+		height: 100px;
+	}
+
+	.info_container {
+		width: 62%;
+	}
+
+	.info_container h4 {
+		margin: 5px;
+		font-size: .8em;
+	}
+
+	.info_container h4:first-child {
+		margin-top: 10px; 
+	}
+
+	.info_container h3 {
+		margin-top: 15px; 
+		font-size: 1em;
+	}
+
+	.back p {
+		font-size: 1em;
 	}
 }
 
