--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -15,7 +15,7 @@
 
 
 <div id="wedding_party">
-	<div style="background-color: white; width: 100%; height: 200px; position: relative;">
+	<div class="wedding_party_h1_con">
 	<h1 style=" position: absolute; left:0; right:0; top: 50%; margin:0 auto; margin-top: -50px; ">The Wedding Party</h1>
 	</div>
 	<div style="width: 100%; overflow:hidden; background-color: #202020; ">
