--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -117,7 +117,7 @@
 	});
 
 function errorMsg(){
-	if($(window).height() < 500){
+  if($(window).height() < 500 && $(window).width() < 480){
 		$('#enter_code').css('display', 'none')
 		$('.wrongway').css('display', 'block')
 	} else {
