--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -81,6 +81,7 @@
 	 	var height = $(document).height()
 	 	$('#black_overlay, #bg_about_us').css('height', height)   
 	}
+	bgOverlay()
 	window.addEventListener("load", bgOverlay, false);
 	window.addEventListener("resize", bgOverlay, false);
 	
