--- a/app/views/welcome/logistics.html.erb
+++ b/app/views/welcome/logistics.html.erb
@@ -21,8 +21,14 @@
 					<h1>BEN</h1><br>
 						<span class="and">and</span><br>
 						<h1>NICOLE</h1><br>
-					<h4 style='font-family: "Rokkitt", serif; font-size: 1.4em;text-shadow: 1px 1px black; margin-top: 0px;'>JUNE 20, 2015 AT 5:00PM IN THE EVENING</h4>
-					<h5 style='font-family: cursive; font-size: 1.4em;text-shadow: 1px 1px black; '>at the talega golf club</h5>
+					<h4 style='font-family: "Rokkitt";color: black; serif; font-size: 1.4em;text-shadow:-.5px -.5px 0 #191970,
+    .5px -.5px 0 #191970,
+    -.5px .5px 0 #191970,
+    .5px .5px 0 #191970;  margin-top: 0px;'>JUNE 20, 2015 AT 5:00PM IN THE EVENING</h4>
+					<h5 style='font-family: cursive; color: black; font-size: 1.4em;text-shadow:-.5px -.5px 0 #191970,
+    .5px -.5px 0 #191970,
+    -.5px .5px 0 #191970,
+    .5px .5px 0 #191970;'>at the talega golf club</h5>
 
 				</p>
 				
@@ -85,6 +91,7 @@
 	 	var height = $(document).height()
 	 	$('#bg_wedding_details').css('height', height)   
     }
+    bgOverlay()
     	window.addEventListener("load", bgOverlay, false);
     	window.addEventListener("resize", bgOverlay, false);
 </script>
