--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -110,17 +110,16 @@
 	}
 
 	function hideCounter(){
-	if($(window).height() < 500){
+	if($(window).height() < 500  && $(window).width() < 480){
 		$('#countdown').css('display', 'none')
-	} else {
-		$('#countdown').css('display', 'block')
-	}
+	} 
 }
 
 	function bgOverlay() {
 	 	var height = $(document).height()
 	 	$('#bg_landing').css('height', height)   
 	}
+	bgOverlay()
 	window.addEventListener("load", bgOverlay, false);
 	window.addEventListener("resize", bgOverlay, false);
 	window.addEventListener("load", hideCounter, false);
