--- a/app/views/welcome/gallery.html.erb
+++ b/app/views/welcome/gallery.html.erb
@@ -15,6 +15,8 @@
            font-size:6em;
            margin-top: -40px;
            margin-left: 50%;
+           -ms-transform: translateX(-50%); 
+            -webkit-transform: translateX(-50%); 
            transform: translateX(-50%);
            display:inline-block;
      " >&#x00AA;
