--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -146,8 +146,8 @@
 	        		"position" : 'Bridesmaid',
 	        		'klass' : '.jasmin',
 	        		'type' : 'Ice Cream',
-	        		'ice_cream' : 'Chocolate Chip',
-	        		'movie' : 'Aladdin',
+	        		'ice_cream' : 'Strawberry Cheesecake',
+	        		'movie' : 'Up',
 	        		'summary' : 'Jasmin has to be one of my favorite cousins. She is a constant reminder that I\'m half Filipino and always has a way of bringing that out in me. I remember going to family parties for Christmas and birthdays and she would always make each time memorable. One memory that I’ll always remember is pretending to be the Spice girls and performing in her bedroom to “Spice Up Your Life”. Of course I was Sporty Spice and she was Baby spice. From being Spice girls to Disney princesses, Jasmin was like another sister to me. Over the years we developed inside jokes (Ay my khaki pants!) that I’m sure we’ll share with our future “Spice girls”. I’m so excited that Jasmin will be by my side on my special day.'
 	        	},
 	        	{
