--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -3,6 +3,12 @@
 </div> -->
 <div class="bg_rsvp"></div>
 
+<div id="error_box2" style="text-align:center; color: red;">
+  <% if @errors %>
+  <h1>You Must Choose a Food</h1>
+  <% end %>
+</div>
+
 <div id="edit_con">
 <div class="created_outer">
   <div class="created_inner">
