--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -36,7 +36,7 @@
     <% elsif @guest.food == 'meat' %>
     <strong><span class="wantsM">You are eating</span> meat</strong>
     <% else %>
-    <strong>Not Applicable</strong>
+    <strong></strong>
   <% end %>
 </p>
 
