--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -56,18 +56,6 @@
 				  </p>
 				  </div>
 
-				  <div id="form_food2">
-				  <h2 class="food_choices" style="font-family: Waltograph; border-bottom: 1px solid black; width: 150px; margin:0 auto;">Food Choices</h2>
-				 <p  style='height: 40px; line-height: 45px;'>
-					<%= f.radio_button(:food, "vegetarian") %>
-					<%= f.label :foo_veg, "<span class='wants'>I want </span>Vegetarian".html_safe %>
-					<%= f.radio_button(:food, "meat") %>
-					<%= f.label :food_meat, "<span class='wants'>I want </span>Meat".html_safe %>
-					<%#= f.radio_button(:food, "fish") %>
-					<%#= f.label :foo_fish, "<span class='wants'>I want </span>Fish".html_safe %>
-				  </p>
-				  </div>
-
 				  <p>
 				    <%= f.submit 'RSVP', :class => 'rsvp_submit' %>
 				  </p>
@@ -132,7 +120,7 @@
 			  		$('#form_error').css('display', 'none')
 		            $('.form h1').css('display', 'none')
 			  		$('#form_rsvp').css('display', 'block')
-
+  					$('#form_food').css('display', 'block')
 
 	}
 
