--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -32,9 +32,9 @@
 <p >
   <strong>Food<span class="colonMobile">:</span><span class="choiceM"> Choice:</span> </strong>
   <% if @guest.food == 'vegetarian' %>
-    <strong><span class="wantsM">You are eating</span> vegetarian</strong>
+    <strong>Vegetarian<span class="wantsM"> dish</span></strong>
     <% elsif @guest.food == 'meat' %>
-    <strong><span class="wantsM">You are eating</span> meat</strong>
+    <strong>Meat<span class="wantsM"> dish</span></strong>
     <% else %>
     <strong></strong>
   <% end %>
