--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -5,7 +5,19 @@
 
 <div id="error_box2" style="text-align:center; color: red;">
   <% if @errors %>
-  <h1>You Must Choose a Food</h1>
+  <% @errors.each do |x| %>
+  <% x.each do |y, z| %>
+    <% if y == :food %>
+    <h1>You Must Choose a Food</h1>
+    <% end %>
+    <% if y == :first_name %>
+    <h1>You Must Enter Your First Name</h1>
+    <% end %>
+    <% if y == :last_name %>
+    <h1>You Must Enter Your Last Name</h1>
+    <% end %>
+  <% end %>
+  <% end %>
   <% end %>
 </div>
 
@@ -41,9 +53,9 @@
 
   <p id='edit_food' style="display: <%= dis %>; height: 40px; line-height: 45px;">
   <%= f.radio_button(:food, "vegetarian") %>
-  <%= label_tag(:foo_veg, "<span class='wants'>I want </span>Vegetarian".html_safe) %>
+  <%= label_tag(:foo_veg, "Vegetarian<span class='wants'> (Eggplant)</span>".html_safe) %>
   <%= f.radio_button(:food, "meat") %>
-  <%= label_tag(:food_meat, "<span class='wants'>I want </span>Meat".html_safe) %>
+  <%= label_tag(:food_meat, "Meat<span class='wants'> (Beef and Salmon)</span>".html_safe) %>
   <%#= f.radio_button(:food, "fish") %>
   <%#= label_tag(:food_fish, "<span class='wants'>I want </span>Fish".html_safe) %>
   </p>
