--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -1344,7 +1344,7 @@ border-right: 30px solid #202020;
 	}
 
 	#edit_rsvp_form p {
-		font-size: 1.8em;
+		font-size: 1.7em;
 	}
 
 
@@ -1353,6 +1353,28 @@ border-right: 30px solid #202020;
 
 
 @media only screen and (max-width: 479px) {
+
+	#error_box, #error_box2 {
+		background-color: rgba(0,0,0,0.8);
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		z-index: 100;
+	}
+
+	#error_box_con , #error_box_con2 {
+		position: absolute;
+		text-shadow	: 2px 2px black;
+		top: 50%;
+		left: 50%;
+		-ms-transform: translate(-50%, -50%); /* IE 9 */
+    	-webkit-transform: translate(-50%, -50%); /* Chrome, Safari, Opera */
+    	transform: translate(-50%, -50%);
+	}
 
 	#gallery_title h1 {
 		font-size: 3.5em;
