--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -17,6 +17,9 @@
     <% if y == :last_name %>
     <h1>You Must Enter Your Last Name</h1>
     <% end %>
+    <% if y == :rsvp %>
+    <h1>You Must Choose a Status</h1>
+    <% end %>
   <% end %>
   <% end %>
   <% end %>
